fix dispatcher of filter

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,6 +7,8 @@
     <filter-mapping>
         <filter-name>FilterDispatcher</filter-name>
         <url-pattern>/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     <listener>
         <description>ServletContextListener</description>
